gts-macros/tests/compile_fail/gts_abstract_final_conflict.stderr
error: struct_to_gts_schema: a type cannot declare both `gts_abstract = true` and `gts_final = true` (a type that is neither inheritable nor instantiable is meaningless).
  --> tests/compile_fail/gts_abstract_final_conflict.rs:16:12
   |
16 | pub struct Thing {
   |            ^^^^^

warning: unused import: `gts::GtsInstanceId`
 --> tests/compile_fail/gts_abstract_final_conflict.rs:4:5
  |
4 | use gts::GtsInstanceId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
